<resources>
    <string name="app_name">Brick games</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_tetris">Bricks</string>
    <string name="action_columnus">Columnus</string>
    <string name="action_color_balls">Color balls</string>
    <string name="score">Score</string>
    <string name="complex">Complex</string>
    <string name="speed">Speed</string>
    <string name="paused">Paused</string>
    <string name="finished">Finished</string>
    <string name="show_next_figure">Show next figure</string>
    <string name="complex_rate">Complex rate</string>
    <string name="speed_rate">Speed rate</string>
    <string name="row_count">Row count</string>
    <string name="show_guide_lines">Show gude lines</string>
    <string name="show_score">Show score</string>
    <string name="use_accelerometer">Use accelerometer</string>
    <string name="use_touch">Use touch</string>
    <string name="use_shake">Use shake</string>
    <string name="reset_to_default">Reset to default</string>
    <string name="help">Help</string>
    <string name="tetris_section_name">Bricks</string>
    <string name="columnus_section_name">Columnus</string>
    <string name="color_balls_section_name">ColorBalls</string>
    <string name="random_seed_value">Random seed value</string>
    <string name="new_game">New game</string>
    <string name="pause">Pause</string>
    <string name="undo">Undo</string>
    <string name="select_game">Select game</string>
    <string name="settings">Settings</string>
    <string name="game_time">Game time</string>
    <string name="number_of_figures">Number of figures</string>
    <string name="number_of_squares">Number of squares</string>
    <string name="number_of_balls">Number of balls</string>
    <string name="about">About</string>
    <string name="version_format">v%1$s (build at %2$s)</string>
    <string name="html_help_file">file:///android_asset/help.html</string>
    <string name="about_file">about.html</string>
    <string name="column_count">Column count</string>
    <string name="demo_mode">Demo mode</string>
    <string name="content">Content</string>
    <string name="ms">ms</string>
    <string name="of_squares">squares</string>
    <string name="of_colors">colors</string>
    <string name="tetris_help_file">file:///android_asset/tetris_help.html</string>
    <string name="columnus_help_file">file:///android_asset/columnus_help.html</string>
    <string name="color_balls_help_file">file:///android_asset/color_balls_help.html</string>
    <string name="btn_left">Left</string>
    <string name="btn_right">Right</string>
    <string name="btn_down">Down</string>
    <string name="btn_rotate">Rotate</string>
    <string name="btn_robot">Robot step</string>


</resources>
