<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity" >

    <group
        android:id="@+id/grp_1"
        >
        <item android:id="@+id/action_tetris"
                  android:title="@string/action_tetris"
                  android:orderInCategory="100"
                  app:showAsAction="never" />
        <item android:id="@+id/action_columnus"
              android:title="@string/action_columnus"
              android:orderInCategory="100"
              app:showAsAction="never" />
        <item android:id="@+id/action_color_balls"
              android:title="@string/action_color_balls"
              android:orderInCategory="100"
              app:showAsAction="never" />
    </group>
    <group
        android:id="@+id/grp2"
        >
        <item android:title="@string/help"
                  android:id="@+id/action_help"
                  android:icon="@drawable/ic_help"
                  android:orderInCategory="101"
                  app:showAsAction="never"/>
    </group>
</menu>

