<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <Button
        android:id="@+id/btnTetris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.14"
        android:text="@string/action_tetris"
        android:textSize="8pt">
    </Button>

    <Button
        android:id="@+id/btnColumnus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.14"
        android:text="@string/action_columnus"
        android:textSize="8pt">
    </Button>

    <Button
        android:id="@+id/btnColorBall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.14"
        android:text="@string/action_color_balls"
        android:textSize="8pt">
    </Button>
</LinearLayout>