<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>


            <TextView
                android:text="@string/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <SeekBar
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:id="@+id/seekSpeed"
                android:labelFor="@+id/speel_label"
                android:maxWidth="300dp"
                android:minHeight="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/speel_label"
                android:text="%"/>

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/complex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <SeekBar
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:id="@+id/seekComplex"
                android:labelFor="@+id/speel_label"
                android:maxWidth="300dp"
                android:minHeight="2dp"/>

            <TextView
                android:text="%"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/complex_label"/>

        </TableRow>

        <TableRow>

            <Switch
                android:text="@string/show_next_figure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch_next_figure"
                android:layout_span="2"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:text="Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:onClick="onClick"/>

        <Button
            android:text="Ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOk"
            android:onClick="onClick"/>
    </LinearLayout>
</LinearLayout>
